# rust-fpmath

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run-all-test-data-gen.sh  run-generator.sh  run-test-data-gen.sh
.github/workflows/: ci.yml
ci/: build-and-test.sh  build-no_std.sh  check-generator.sh  clippy.sh  extract-changelog.sh  get-release-version.sh  lint-aux.sh  package-crate.sh  publish-crate.sh  test-i586.sh
dev-mpfr/: Cargo.toml  build.rs
dev-mpfr/src/: lib.rs
fpmath-tests/: Cargo.toml
fpmath-tests/src/: main.rs
fpmath-tests/src/data/: mod.rs
fpmath-tests/src/data/f32/: acosh.rs  asin_acos.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  cbrt.rs  exp.rs  hypot.rs  log.rs  log_1p.rs  mod.rs  pow.rs  powi.rs  sin_cos.rs  sind_cosd.rs  sinh_cosh.rs  sinpi_cospi.rs  sqrt.rs  tan.rs  tand.rs  tanh.rs  tanpi.rs
fpmath-tests/src/data/f64/: acosh.rs  asin_acos.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  cbrt.rs  exp.rs  gamma.rs  hypot.rs  log.rs  log_1p.rs  mod.rs  pow.rs  powi.rs  sin_cos.rs  sind_cosd.rs  sinh_cosh.rs  sinpi_cospi.rs  sqrt.rs  tan.rs  tand.rs  tanh.rs  tanpi.rs
fpmath-tests/src/tests/: f32.rs  f64.rs
fpmath-tests/src/tests/f32/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  hypot.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  round.rs  sqrt.rs  trigonometric_deg.rs  trigonometric_pi.rs  trigonometric_rad.rs
fpmath-tests/src/tests/f64/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  hypot.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  round.rs  sqrt.rs  trigonometric_deg.rs  trigonometric_pi.rs  trigonometric_rad.rs
generator/: Cargo.toml
generator-aux/: Cargo.toml
generator-aux/src/: julia.rs  main.rs  sollya.rs
generator-aux/src/generate/common/: reduce_pi_2_large.rs
generator-aux/src/generate/f32/: atan.rs  cbrt.rs  exp.rs  exp2.rs  gamma.rs  log.rs  mod.rs  sin_cos.rs  tan.rs
generator-aux/src/generate/f64/: atan.rs  exp.rs  exp2.rs  gamma.rs  log.rs  mod.rs  reduce_90_deg.rs  reduce_pi_2.rs  sin_cos.rs  tan.rs
generator/src/: generate.rs  julia.rs  main.rs  sollya.rs
generator/src/generate/: arg_utils.rs  consts.rs  julia.rs  mod.rs  sollya.rs
generator/src/generate/common/: mod.rs  reduce_pi_2_large.rs
generator/src/generate/data/: asin_acos.rs  atan.rs  cbrt.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  gamma.rs  ln.rs  log.rs  log10.rs  log2.rs  mod.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  reduce_pi_2_large.rs  sin_cos.rs  tan.rs
generator/src/generate/f32/: asin_acos.rs  atan.rs  cbrt.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  gamma.rs  log.rs  log10.rs  log2.rs  mod.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  sin_cos.rs  tan.rs
generator/src/generate/f64/: asin_acos.rs  atan.rs  cbrt.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  gamma.rs  log.rs  log10.rs  log2.rs  mod.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  sin_cos.rs  tan.rs
src/: double.rs  host_f32.rs  host_f64.rs  int.rs  lib.rs  soft_f32.rs  soft_f64.rs  traits.rs
src/f32/: asin_acos.rs  atan.rs  cbrt.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  gamma.rs  log.rs  log10.rs  log2.rs  mod.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  sin_cos.rs  sinh_cosh.rs  tan.rs
src/f64/: asin_acos.rs  atan.rs  cbrt.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  gamma.rs  log.rs  log10.rs  log2.rs  mod.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  sin_cos.rs  sinh_cosh.rs  tan.rs
src/generic/: acosh.rs  asin_acos.rs  asind_acosd.rs  asinh.rs  asinpi_acospi.rs  atan.rs  atand.rs  atanh.rs  atanpi.rs  cbrt.rs  ceil.rs  div_pi.rs  exp.rs  exp10.rs  exp2.rs  floor.rs  frexp.rs  gamma.rs  hypot.rs  ln.rs  log.rs  log10.rs  log2.rs  mod.rs  pow.rs  powi.rs  rad_to_deg.rs  reduce_90_deg.rs  reduce_half_mul_pi.rs  reduce_pi_2.rs  reduce_pi_2_large.rs  round.rs  scalbn.rs  sin_cos.rs  sind_cosd.rs  sinh_cosh.rs  sinpi_cospi.rs  sqrt.rs  tan.rs  tand.rs  (+3 more)
tests/math/: main.rs
tests/math/f32/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  hypot.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  round.rs  sqrt.rs  trigonometric.rs
tests/math/f64/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  hypot.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  round.rs  sqrt.rs  trigonometric.rs
