[package]
name = "fpmath"
version = "0.1.1"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2021"
rust-version = "1.70"
description = "A floating point math library"
repository = "https://github.com/eduardosm/rust-fpmath"
license = "MIT OR Apache-2.0"
keywords = ["float", "floating-point", "math"]
categories = ["mathematics", "no-std", "science"]
exclude = ["/.github", ".gitignore", "/ci"]
publish = true

[package.metadata.docs.rs]
features = ["soft-float"]

[features]
default = []
soft-float = ["dep:rustc_apfloat"]

[dependencies]
rustc_apfloat = { optional = true, version = "0.2.2" }

[dev-dependencies]
rand = { version = "0.9.0", default-features = false }
rand_pcg = "0.9.0"

[dev-dependencies.rug]
version = "1.27.0"
default-features = false
features = ["float", "integer", "std"]

[workspace]
members = [
    "generator",
]
