[package]
name = "fpmath"
version = "0.2.0-pre"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2024"
rust-version = "1.85"
description = "A floating point math library"
repository = "https://github.com/eduardosm/rust-fpmath"
license = "MIT OR Apache-2.0"
keywords = ["float", "floating-point", "math"]
categories = ["mathematics", "no-std", "science"]
exclude = ["/.github", ".gitignore", "/ci"]
publish = false

[features]
default = []

[dependencies]

[dev-dependencies]
rand = { version = "0.10.0", default-features = false }
rand_pcg = "0.10.1"

[dev-dependencies.rug]
version = "1.29.0"
default-features = false
features = ["float", "integer", "std"]

[workspace]
members = [
    "generator",
]
