[package]
name = "fpmath-tests"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bincode = "=2.0.0-rc.3"
indicatif = "0.17.8"
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
dev-mpfr = { workspace = true }
fpmath = { workspace = true }
