[package]
name = "fpmath-tests"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bincode = "=2.0.0-rc.3"
indicatif = "0.17.8"
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
fpmath = { workspace = true }

[dependencies.rug]
version = "1.26.1"
default-features = false
features = ["float", "integer", "std"]

[dependencies.gmp-mpfr-sys]
version = "1.6.4"
default-features = false
features = ["force-cross"] # needed for i586 support
