[package]
name = "generator-aux"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.rug]
version = "1.27.0"
default-features = false
features = ["float", "integer", "std"]

[dependencies.gmp-mpfr-sys]
version = "1.6.4"
default-features = false
features = ["force-cross"] # needed for i586 support
